--- a/fomulario/css/style.css
+++ b/fomulario/css/style.css
@@ -74,12 +74,13 @@ section.formulario .form{
     background-color: white; */
 }
 section.formulario .form form .box-form{
-    border: 1px solid #444;
+    /* border: 1px solid #444; */
     border-radius: 10px;
     padding: 15px 15px 30px;
     background-color: white;
     margin-top: 20px;
     padding: 30px;
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 section.formulario .form form .box-form:nth-of-type(1){
     margin-top: 0;
@@ -194,6 +195,7 @@ input[type=submit]{
     top: 0;
     transform: translateX(-50%);
     border-radius: 10px;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.8));
     cursor: pointer;
     transition: .5s;
 }
