Formulario BACK-END
Alguns testes falhos que serão testados mais a frente

--- a/fomulario/css/style.css
+++ b/fomulario/css/style.css
@@ -19,7 +19,11 @@ span{
     display: inline-block;
 }
 
-
+.verificacao{
+    margin-top: 20px;
+    font-size: 20px;
+    color: #e72f0f;
+}
 .confirmado{
     margin-top: 20px;
     font-size: 20px;
