--- a/fomulario/css/index.css
+++ b/fomulario/css/index.css
@@ -1,33 +1,18 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-html, body{
-    height: 100%;
-    background-color: rgb(245, 245, 245);
-}
-.center{
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 10px 2%;
-}
+
 span{
     color: rgb(255, 30, 30);
     display: inline-block;
 }
-
-.verificacao{
+/* .verificacao{
     margin-top: 20px;
     font-size: 20px;
     color: #e72f0f;
-}
+} */
 .confirmado{
     margin-top: 20px;
     font-size: 20px;
     color: #00A651;
+
 }
 .banner {
     text-align: center;
@@ -207,10 +192,13 @@ input[type=submit]{
     cursor: pointer;
     transition: .5s;
 }
+input[type=submit]:focus{
+    outline: none;
+    border: 0;
+}
 input[type=submit]:hover{
     background-color: #00A651;
 }
-
 .confDados{
     margin: 30px 0 10px;
 }
@@ -220,6 +208,9 @@ input[type=submit]:hover{
 .confDados label{
     color: #e72f0f;
     cursor: pointer;
+}
+#outros{
+    cursor: text;
 }
 
 @media screen and (max-width: 768px){
