--- a/fomulario/css/main.css
+++ b/fomulario/css/main.css
@@ -4,6 +4,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Archivo', sans-serif;
+    outline: none;
+    border: 0;
 }
 html, body{
     height: 100%;
