--- a/fomulario/painel/css/painelAgend.css
+++ b/fomulario/painel/css/painelAgend.css
@@ -27,9 +27,15 @@ header .logo a img{
 .user{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 400px;
 }
-
-.user h2{
+.user-wecome{
+    display: flex;
+    align-items: center;
+    width: calc(100% - 30px);
+}
+.user-wecome h2{
     color: #F5F5F5;
     font-style: normal;
     font-weight: normal;
@@ -42,7 +48,63 @@ header .logo a img{
     width: 35px;
     cursor: pointer;
 }
+.imagem-usuario{
+    margin-left: 5px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.imagem-usuario img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
 
+.loggout a{
+    background-image: url('../img/log-out.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    text-decoration: none;
+    transition: .5s;
+    position: relative;
+    left: 20px;
+}
+.loggout a::after{
+    content: 'Sair';
+    position: absolute;
+    top: 40px;
+    left: -18px;
+    width: 50px;
+    height: 20px;
+    background-color: #00bfa5;
+    text-align: center;
+    line-height: 20px;
+    font-size: 14px;
+    border-radius: 5px;
+    transition: .5s opacity ease;
+    opacity: 0;
+    color: #f5f5f5;
+    pointer-events: none;
+}
+.loggout a::before{
+    content: '';
+    position: absolute;
+    top: 33px;
+    left: -1px;
+    border: 8px solid #00bfa5;
+    transform: rotate(45deg);
+    transition: .5s opacity ease;
+    opacity: 0;
+    pointer-events: none;
+}
+.loggout a:hover::before,
+.loggout a:hover::after{
+    opacity: 1;
+}
 /* ** */
 
 
