--- a/fomulario/painel/css/painelAgend.css
+++ b/fomulario/painel/css/painelAgend.css
@@ -25,15 +25,12 @@ header .logo a img{
 }
 
 .user{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 400px;
+    width: auto;
 }
 .user-wecome{
     display: flex;
     align-items: center;
-    width: calc(100% - 30px);
+    width: 100%;
 }
 .user-wecome h2{
     color: #F5F5F5;
@@ -41,6 +38,10 @@ header .logo a img{
     font-weight: normal;
     font-size: 20px;
     /* cursor: auto; */
+}
+
+.menu-wraper{
+    position: relative;
 }
 
 .img_logo{
@@ -53,57 +54,86 @@ header .logo a img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    border: 2px solid #ccc;
 }
 .imagem-usuario img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-
-.loggout a{
-    background-image: url('../img/log-out.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    text-decoration: none;
-    transition: .5s;
-    position: relative;
-    left: 20px;
+.imagem-user{
+    margin-left: 5px;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(90, 88, 88);
 }
-.loggout a::after{
-    content: 'Sair';
+.imagem-user i{
+    width: 70%;
+    height: 70%;
+    fill: #ccc;
+}
+nav.menu-single{
+    display: none;
     position: absolute;
-    top: 40px;
-    left: -18px;
-    width: 50px;
-    height: 20px;
-    background-color: #00bfa5;
-    text-align: center;
-    line-height: 20px;
-    font-size: 14px;
-    border-radius: 5px;
-    transition: .5s opacity ease;
-    opacity: 0;
-    color: #f5f5f5;
-    pointer-events: none;
+    width: 200px;
+    height: auto;
+    background-color: #00ad71;
+    left: -145%;
+    top: 64px;
+    border-radius: 8px;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, .5);
+    /* opacity: 1;
+    transition: .5s linear; */
 }
-.loggout a::before{
+nav.menu-single::after{
     content: '';
+    border: 15px solid #00ad71;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
     position: absolute;
-    top: 33px;
-    left: -1px;
-    border: 8px solid #00bfa5;
-    transform: rotate(45deg);
-    transition: .5s opacity ease;
-    opacity: 0;
-    pointer-events: none;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    
 }
-.loggout a:hover::before,
-.loggout a:hover::after{
-    opacity: 1;
+nav.menu-single ul{
+    list-style: none;
+    /* padding: 0 0 5px; */
+}
+nav.menu-single li{
+    padding: 10px 5%;
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    transition: .5s linear;
+}
+nav.menu-single li:last-child{
+    border: none;
+    border-radius: 0 0 8px 8px;
+}
+nav.menu-single li:first-child{
+    border-radius: 8px 8px 0 0;
+}
+nav.menu-single li:hover{
+    background-color: #00915e;
+    /* border-radius: 8px; */
+}
+nav.menu-single a{
+    text-decoration: none;
+    display: flex;
+    color: #f5f5f5;
+    font-weight: normal;
+    font-size: 14px;
+}
+nav.menu-single a i{
+    width: 15px;
+    height: 15px;
+    fill: #f5f5f5;
+    margin-right: 10px;
 }
 /* ** */
 
