--- a/fomulario/css/main.css
+++ b/fomulario/css/main.css
@@ -35,9 +35,9 @@ html, body{
   }
   
   .pace .pace-progress {
-    background: #22df80;
+    background: #22dfc6;
     position: fixed;
-    z-index: 2000;
+    z-index: 100000;
     top: 0;
     right: 100%;
     width: 100%;
