--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -4,13 +4,46 @@
 html, body{
     overflow: hidden;
 }
+.section-fixed{
+    height: calc(100% - 100px);
+    position: fixed;
+    bottom: 0;
+}
+/* Geral */
+
+.title{
+    /* border: 1px solid black; */
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+    background-color: #444;
+}
+
+.title h2{
+    font-size: 25px;
+    color: #f5f5f5;
+    font-weight: normal;
+    margin-left: 20px;
+    /* line-height: 40px; */
+}
+.animate-form .title h2{
+    animation: left 1s;
+}
+.title h2 i svg{
+    width: 30px;
+    height: 30px;
+    fill: #f5f5f5;
+}
+
+/* ** */
 
 /* Header */
 
 header{
+    position: fixed;
     width: 100%;
     height: 100px;
     background-color: #00A651;
+    z-index: 3000;
 }
 header .center{
     display: flex;
@@ -89,6 +122,7 @@ nav.menu-single{
     background-color: #00ad71;
     left: -145%;
     top: 63px;
+    z-index: 3000;
     border-radius: 8px;
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, .5));
 }
@@ -139,7 +173,7 @@ nav.menu-single a i{
     position: absolute;
     bottom: 50px;
     right: 50px;
-    transition: .5s all;
+    transition: bottom .5s, right .5s;
 }
 .homeInicial-center{
     animation: bottom 1s;    
@@ -147,7 +181,7 @@ nav.menu-single a i{
     height: 50px; 
     background-color: #00ad71;
     border-radius: 50%;
-    transition: .5s all;
+    transition: .5s;
 }
 
 .homeInicial a i{
@@ -163,7 +197,6 @@ nav.menu-single a i{
 .homeInicial-center:hover{
     width: 60px;
     height: 60px;
-    
     background-color: #00695c;
 }
 .homeInicial:hover{
