--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -33,6 +33,8 @@ body{
     font-weight: normal;
     margin-left: 20px;
     /* line-height: 40px; */
+    display: flex;
+    align-items: center;
 }
 .animate-form .title h2{
     animation: left 1s;
@@ -40,6 +42,7 @@ body{
 .title h2 i svg{
     width: 30px;
     height: 30px;
+    margin-right: 15px;
     fill: #f5f5f5;
 }
 
