--- a/fomulario/painel/css/login-style.css
+++ b/fomulario/painel/css/login-style.css
@@ -16,7 +16,7 @@ html, body{
 .form-login-center{
     width: 100%;
     padding: 30px 1%;
-    border-bottom: 2px solid #aaa;
+    border-bottom: 2px solid #fff;
 }
 .animate-form.form-login-center{
     animation: top 1s;
@@ -25,13 +25,13 @@ html, body{
     position: relative;
     width: 14%;
     padding: 15%;
-    border: 2px solid #aaa;
+    border: 2px solid #fff;
     border-radius: 50%;
     margin: 0 auto;
 }
 .user-img::before, .user-img::after{
     content: '';
-    border-top: 2px solid #aaa;
+    border-top: 2px solid #fff;
     width: 120%;
     position: absolute;
     top: 50%;
@@ -45,7 +45,7 @@ html, body{
 .user-img i{
     width: 60%;
     height: 60%;
-    fill: #aaa;
+    fill: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
