--- a/fomulario/css/animate.css
+++ b/fomulario/css/animate.css
@@ -5,7 +5,16 @@
 .anime.left{
     transform: translate3d(-100, 0, 0);
 } */
-
+@keyframes none{
+  from{
+      opacity: 0;
+      transform: translate3d(0px, 0, 0);
+  }
+  to{
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+  }
+}
 @keyframes left{
     from{
         opacity: 0;
