--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -6,8 +6,9 @@ body{
 }
 .disabled{
     cursor: not-allowed;
-    /* background-color: rgb(192, 71, 71); */
 }
+
+/* Password */
 .password{
     position: relative;
 }
@@ -40,6 +41,25 @@ body{
     position: fixed;
     bottom: 0;
 }
+/* ** */
+
+/* PopUp */
+.popup{
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 100000000;
+    width: 100%;
+    height: 100%;
+    /* -webkit-backdrop-filter: blur(1px); Safari 9+ */
+    /* backdrop-filter: blur(1px); /* Chrome and Opera */
+    background-color: rgba(0, 0, 0, 0.1);
+    /* animation: none 1s; */
+    /* transition: 0; */
+}
+/* ** */
+
 /* Geral */
 .center .container-central{
     width: 100%;
