--- a/fomulario/css/animate.css
+++ b/fomulario/css/animate.css
@@ -59,6 +59,17 @@
     }
 }
 
+@keyframes bottomSair{
+  from{
+      opacity: 0;
+      transform: translate3d(0, 0, 0);
+    }
+    to{
+      opacity: 1;
+      transform: translate3d(0, -100px, 0);
+  }
+}
+
 @keyframes shake {
     from, to {
       transform: translate3d(0, 0, 0);
