--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -47,16 +47,19 @@ body{
 .popup{
     position: fixed;
     display: none;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 0;
-    z-index: 100000000;
+    z-index: 600000;
     width: 100%;
     height: 100%;
-    /* -webkit-backdrop-filter: blur(1px); Safari 9+ */
-    /* backdrop-filter: blur(1px); /* Chrome and Opera */
+    -webkit-backdrop-filter: blur(2px); /* Safari 9+ */
+    backdrop-filter: blur(2px); /* Chrome and Opera */
     background-color: rgba(0, 0, 0, 0.1);
     /* animation: none 1s; */
-    /* transition: 0; */
+    opacity: 0;
+    transition: opacity .5s;
 }
 /* ** */
 
