--- a/fomulario/painel/css/table.css
+++ b/fomulario/painel/css/table.css
@@ -38,7 +38,7 @@ table {
   border-radius: 10px;
   overflow: hidden;
   width: 100%;
-  margin: 0 auto;
+  margin: 30px auto 0;
   position: relative;
   /* animation: bottom 1s; */
 }
