--- a/fomulario/painel/css/home.css
+++ b/fomulario/painel/css/home.css
@@ -195,3 +195,136 @@ section.button-list .btn-list:nth-child(2){
     color: #444;
 }
 /* ** */
+
+/* Form Agend */
+
+.form-agend{
+    width: 95%;
+    height: 87%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: #fff;
+    position: relative;
+    text-align: center;
+}
+.form-agend a{
+    position: absolute;
+    top: -13px;
+    right: -13px;
+    background-color: #4158d0;
+    display: flex;
+    width: 35px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #f5f5f5;
+    font-size: 25px;
+    border-radius: 50%;
+    border: 2px solid #2a292ba4;
+    transition: background .2s;
+}
+.form-agend a:hover{
+    background-color: #374baf;
+}
+.form-agend h2{
+    color: #777;
+    font-weight: normal;
+    font-size: 25px;
+    /* text-align: center; */
+}
+
+.form-agend form{
+    width: 98%;
+    margin: 30px 10px;
+    display: flex;
+    flex-direction: column;
+}
+.form-agend .center-form{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+.form-agend form .form-50{
+    width: 49%;
+    /* height: 300px; */
+    /* background-color: #00CC83; */
+}
+
+form .form-group-agend{
+    border-radius: 10px;
+    background-color: white;
+    margin-top: 20px;
+    padding: 2%;
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+    text-align: left;
+}
+form .form-group-agend.disabled{
+    background-color: #777;
+    cursor: not-allowed;
+}
+form .form-group-agend.disabled label{
+    color: #fff;
+    cursor: not-allowed;
+}
+form .form-group-agend:nth-of-type(1){
+    margin-top: 0;
+}
+.form-group-agend label{
+    font-size: 20px;
+    color: #777;
+    font-weight: 300;
+}
+.form-group-agend input{
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    height: 20px;
+    color: #555;
+    margin-top: 15px;
+    margin-left: 10px;
+    padding-left: 5px;
+    font-size: 18px;
+    padding-bottom: 5px;
+    transition: border-bottom .5s linear;
+    width: 90%;
+}
+.form-group-agend input[disabled]{
+    background-color: transparent;
+    color: #f5f5f5 !important;
+}
+.form-group-agend input:focus{
+    outline: none;
+    border-bottom: 2px solid #1673B5;
+}
+
+form input[type=submit]{
+    border: 0;
+    margin: 30px 0 20px;
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #fff;
+    max-width: 300px;
+    background-color: #36B24B;
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.8));
+    cursor: pointer;
+    transition: background-color .5s;
+}
+form input[type=submit]:focus{
+    outline: none;
+    border: 0;
+}
+form input[type=submit]:hover{
+    background-color: #00A651;
+}
+
+/* ** */
