--- a/fomulario/painel/css/home.css
+++ b/fomulario/painel/css/home.css
@@ -208,10 +208,11 @@ section.button-list .btn-list:nth-child(2){
     position: relative;
     text-align: center;
 }
-.form-agend:nth-of-type(6){
+.form-agend.animate-popup{
     display: block;
+    animation: bottom .5s;
 }
-.form-agend a{
+.form-agend > a{
     position: absolute;
     top: -13px;
     right: -13px;
@@ -248,13 +249,15 @@ section.button-list .btn-list:nth-child(2){
 .form-agend .center-form{
     display: flex;
     width: 100%;
+    max-height: 450px;
+    overflow: auto;
     justify-content: space-around;
 }
 .form-agend form .form-50{
     width: 49%;
-    /* background-color: #00CC83; */
+    height: 80%;
+    padding: 10px 0;
 }
-
 form .form-group-agend{
     border-radius: 10px;
     background-color: white;
@@ -292,6 +295,9 @@ form .form-group-agend.ged input{
     margin-right: 10px;
     border: 0;
     padding: 0;
+}
+form .form-group-agend input[type='datetime-local']{
+    cursor: pointer;
 }
 form .form-group-agend .tipo-ajuda{
     margin: 10px 0;
@@ -355,7 +361,7 @@ form .form-group-agend:nth-of-type(1){
     border-bottom: 2px solid #1673B5;
 }
 
-form input[type=submit]{
+.form-agend form input[type=submit]{
     border: 0;
     margin: 30px 0 20px;
     width: 100%;
