--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -48,7 +48,7 @@ input[disabled]{
 /* PopUp */
 .popup{
     position: fixed;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     top: 0;
