--- a/fomulario/painel/css/relatorio.css
+++ b/fomulario/painel/css/relatorio.css
@@ -32,7 +32,6 @@
 .opcoes-wrapper i svg{
     width: 25px;
     height: 25px;
-    fill: #eb4034;
     transition: fill .2s;
 }
 .opcoes-wrapper .remove-single{
@@ -41,11 +40,17 @@
 .opcoes-wrapper .editar-single i svg{
     fill: #4158d0;
 }
+.opcoes-wrapper .mostrar-single i svg{
+    width: 30px;
+    height: 30px;
+    fill: #4158d0;
+}
 .opcoes-wrapper .remove-single i svg{
     fill: #eb4034;
 }
 .opcoes-wrapper .editar-single:hover i svg,
-.opcoes-wrapper .remove-single:hover i svg{
+.opcoes-wrapper .remove-single:hover i svg,
+.opcoes-wrapper .mostrar-single:hover i svg{
     fill: #ebd034;
 }
 
@@ -163,3 +168,83 @@
     padding: 0 2%;
 }
 /* ** */
+
+/* Opções de relatorio */
+.opcao-relatorio{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 4%;
+}
+.opcao-relatorio .gerar{
+    width: 20%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #f5f5f5;
+    font-weight: normal;
+    text-decoration: none;
+    filter: drop-shadow(0 2px 3px #444);
+    background-color: #4158d0;
+    transition: background-color .5s;
+}
+.opcao-relatorio .gerar:hover{
+    background-color: #3649aa;
+}
+.opcoes-relatorio-wrapper{
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+.opcoes-relatorio-wrapper i{
+    width: 40px;
+    height: 40px;
+    fill: #909090;
+    transition: .5s;
+    /* transform: rotate(0deg); */
+}
+.opcoes-relatorio-wrapper:hover i{
+    fill: #3493eb;
+    transform: rotate(180deg);
+}
+.opcoes-relatorio-wrapper .closeX{
+    display: none;
+}
+.opcaoes-relatorio-single{
+    display: none;
+    position: absolute;
+    width: 150px;
+    height: auto;
+    background-color: #707070;
+    top: 20px;
+    left: 43px;
+    z-index: 2000;
+    border-radius: 5px;
+}
+.opcaoes-relatorio-single a{
+    color: #f5f5f5;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-transform: uppercase;
+    color: #f5f5f5;
+    font-weight: normal;
+    text-decoration: none;
+    transition: background-color .5s;
+}
+.opcaoes-relatorio-single a:first-of-type{
+    border-radius: 5px 5px 0 0;
+}
+.opcaoes-relatorio-single a:last-of-type{
+    border-radius: 0 0 5px 5px;
+}
+.opcaoes-relatorio-single a:hover{
+    background-color: #909090;
+}
