--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -75,14 +75,20 @@ input[disabled]{
     border-radius: 10px;
 }
 .title{
-    /* border: 1px solid black; */
-    /* position: fixed; */
     width: 100%;
     padding: 10px;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
     background-color: #444;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: .5s;
 }
-
+.title.border-title{
+    border-radius: 10px 10px 0 0;
+    transition: .5s;
+}
 .title h2{
     font-size: 25px;
     color: #f5f5f5;
@@ -101,6 +107,19 @@ input[disabled]{
     margin-right: 15px;
     fill: #f5f5f5;
 }
+.title .seta-title{
+    margin-right: 20px;
+    width: 30px;
+    height: 30px;
+    transform: rotate(-90deg);
+    transition: .5s;
+}
+.title .seta-title i svg{
+    width: 100%;
+    height: 100%;
+    fill: #f5f5f5;
+}
+
 
 /* ** */
 
@@ -156,12 +175,20 @@ header .logo a img{
     width: 35px;
     cursor: pointer;
 }
+.border-logo-usuario{
+    border: 2px solid #ccc;
+    transition: .5s linear;
+}
+.border-usuario-active{
+    border: 2px solid #00A651;
+    transition: .5s linear;
+    box-shadow: 0 0 10px 2px rgb(80, 80, 80);
+}
 .imagem-usuario{
     margin-left: 5px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    border: 2px solid #ccc;
 }
 .imagem-usuario img{
     width: 100%;
@@ -172,7 +199,6 @@ header .logo a img{
     margin-left: 5px;
     width: 40px;
     height: 40px;
-    border: 2px solid #ccc;
     border-radius: 50%;
     display: flex;
     justify-content: center;
