--- a/fomulario/painel/css/relatorio.css
+++ b/fomulario/painel/css/relatorio.css
@@ -4,6 +4,7 @@
     overflow: auto;
 }
 .div-wrapper{
+    display: none;
     max-height: 500px;
     overflow: auto;
     padding: 20px;
@@ -224,6 +225,8 @@
     left: 43px;
     z-index: 2000;
     border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 1),
+                0 -2px 5px 0 rgba(0, 0, 0, .5);
 }
 .opcaoes-relatorio-single a{
     color: #f5f5f5;
@@ -246,3 +249,31 @@
 .opcaoes-relatorio-single a:hover{
     background-color: #909090;
 }
+/* ** */
+
+/* lista-paginacao */
+
+.lista-paginacao{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+}
+.lista-paginacao-wrapper a{
+    display: inline-block;
+    text-align: center;
+    line-height: 20px;
+    font-size: 18px;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    /* background-color: red; */
+}
+.lista-paginacao-wrapper a:last-of-type,
+.lista-paginacao-wrapper a:first-of-type{
+    width: auto;
+}
+
+/* ** */
