--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -9,6 +9,9 @@ input[disabled]{
     background-color: #777;
     color: #f5f5f5 !important;
 }
+.disabled{
+    cursor: not-allowed;
+}
 
 /* Password */
 .password{
