--- a/fomulario/painel/css/relatorio.css
+++ b/fomulario/painel/css/relatorio.css
@@ -255,25 +255,60 @@
 
 .lista-paginacao{
     width: 100%;
-    height: 40px;
+    /* height: 40px; */
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     /* background-color: red; */
 }
+.lista-paginacao-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .lista-paginacao-wrapper a{
-    display: inline-block;
-    text-align: center;
-    line-height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 18px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 2px solid #50c886;
+    color: #444;
+    fill: #444;
     margin: 0 5px;
-    /* background-color: red; */
+    text-decoration: none;
+    transition: .5s;
+}
+.lista-paginacao-wrapper a:hover,
+.lista-paginacao-wrapper a.active-button-paginacao{
+    background-color: #50c886;
+    color: #f5f5f5;
+    fill: #f5f5f5;
+    transition: .5s;
+}
+.lista-paginacao-wrapper a i{
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
 }
 .lista-paginacao-wrapper a:last-of-type,
-.lista-paginacao-wrapper a:first-of-type{
+.lista-paginacao-wrapper a:first-of-type,
+.lista-paginacao-wrapper a:nth-last-of-type(2),
+.lista-paginacao-wrapper a:nth-of-type(2){
     width: auto;
+    /* padding: 10px; */
+    border-radius: 20px;
+}
+.lista-paginacao-wrapper a:nth-last-of-type(2),
+.lista-paginacao-wrapper a:nth-of-type(2){
+    justify-content: space-between;
+}
+.lista-paginacao-wrapper a:nth-of-type(2) i svg{
+    transform: rotate(-180deg);
 }
 
 /* ** */
