--- a/fomulario/painel/css/home.css
+++ b/fomulario/painel/css/home.css
@@ -365,6 +365,14 @@ form .form-group-agend:nth-of-type(1){
     border-bottom: 2px solid #1673B5;
 }
 
+.form-group-agend .box-form-resp input{
+    width: auto;
+    height: auto;
+    margin-top: 10px;
+    margin-left: 15px;
+    cursor: pointer;
+}
+
 .form-agend form input[type=submit]{
     border: 0;
     margin: 30px 0 20px;
